--- a/app/src/main/res/layout/active_echoer.xml
+++ b/app/src/main/res/layout/active_echoer.xml
@@ -33,6 +33,7 @@
                 android:id="@+id/back_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="20dp"
                 android:text="返回"
                 android:textSize="20sp"/>
