--- a/app/src/main/res/layout/item_listactive.xml
+++ b/app/src/main/res/layout/item_listactive.xml
@@ -45,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
+            android:layout_marginLeft="10dp"
             android:text="返回"
             android:textSize="20sp"/>
     </RelativeLayout>
