--- a/app/src/main/res/layout/active_echoer.xml
+++ b/app/src/main/res/layout/active_echoer.xml
@@ -49,16 +49,16 @@
             android:textSize="15dp"
             android:text="sssssssss"/>
 
-        <voicelibs.view.WaveSurfaceView
-            android:id="@+id/wavesfv"
+        <voicelibs.view.WaveView
+            android:id="@+id/waveview"
             android:layout_width="fill_parent"
             android:layout_below="@id/title"
             android:layout_height="120dp"/>
 
-        <voicelibs.view.WaveSurfaceView
-            android:id="@+id/waversfv"
+        <voicelibs.view.WaveView
+            android:id="@+id/waveRview"
             android:layout_width="fill_parent"
-            android:layout_below="@id/wavesfv"
+            android:layout_below="@id/waveview"
             android:layout_height="120dp"/>
 
         <TextView
@@ -66,7 +66,7 @@
             android:layout_marginTop="10dp"
             android:clickable="true"
             android:id="@+id/similarity"
-            android:layout_below="@id/waversfv"
+            android:layout_below="@id/waveRview"
             android:layout_width="fill_parent"
             android:textAlignment="center"
             android:layout_height="wrap_content"
